tests/invalid_make_int/missing_interface_import.int_err_exp2
missing_interface_import.m:011: In definition of type `bar'/0:
missing_interface_import.m:011:   error: undefined type `map'/2.
missing_interface_import.m:011:   (The module `map' has not been imported in
missing_interface_import.m:011:   the interface.)
missing_interface_import.m:013: In declaration of predicate `p'/1:
missing_interface_import.m:013:   error: undefined type `univ.univ'/0.
missing_interface_import.m:013:   (The module `univ' has not been imported in
missing_interface_import.m:013:   the interface.)
missing_interface_import.m:014: In declaration of predicate `q'/1:
missing_interface_import.m:014:   error: undefined type `list'/1.
missing_interface_import.m:014:   (The module `list' has not been imported in
missing_interface_import.m:014:   the interface.)
`Mercury/ints/missing_interface_import.int' and
  `Mercury/int2s/missing_interface_import.int2' not written.
